fix label gap

--- a/static/main.css
+++ b/static/main.css
@@ -65,6 +65,7 @@ label {
   color: white;
   font-size: 14px;
   border-radius: 5px;
+  margin: 2px !important;
 }
 
 
